--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Iko Nini Admin Dashboard",
-  "name": "Iko Nini Admin Dashboard",
+  "short_name": "Electronics Den Admin Dashboard",
+  "name": "Electronics Den Admin Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
